--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="og:title" content="Stylite">
     <meta name="og:description" content="Dart, Python and, Scala developer">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-    <link rel="stylesheet" href="https://stylite.github.io/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <html lang="en">
 <body>
