Change lyrics to Takui

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
     <div class="card">
         <div class="card-content">
-            <h1>Lyrics</h1>
-            <h2>Rust based lyrics scrapper!</h2>
-            <a href="https://github.com/Stylite/Lyrics" class="button">Github</a>
+            <h1>Takui</h1>
+            <h2>Crystal based image host!</h2>
+            <a href="https://github.com/Stylite/takui" class="button">Github</a>
         </div>
     </div>
     <div class="card">
