--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="card">
         <div class="card-content">
             <h1>Sana</h1>
-            <h2>A simple bot for your server!</h2>
+            <h2>A simple bot for your discord server!</h2>
             <a href="https://sana.stylite.me/" class="button">Invite!</a>
         </div>
     </div>
