--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="card">
         <div class="card-content">
             <h1>Lyrics</h1>
-            <h2>A simple to use CLI song lyrics tool</h2>
+            <h2>A simple CLI song lyrics tool</h2>
             <a href="https://github.com/Stylite/Lyrics" class="button">Github</a>
         </div>
     </div>
